# aydo_peaq_connector

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: args.rs
hub/: Cargo.toml
hub/src/: lib.rs
node/: Cargo.toml
node/src/: errors.rs  extrinsics.rs  lib.rs  metadata.rs
node/src/calls/: block.rs  block_hash.rs  call.rs  extrinsic.rs  http.rs  mod.rs  nonce.rs  runtime_metadata.rs  runtime_version.rs  storage.rs
src/: lib.rs  main.rs
