[workspace]
members = ["cli", "hub", "node"]
resolver = "2"

[package]
name = "aydo_peaq_connector"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
thiserror = "1.0.58"
anyhow = "1.0"

hub = { path = "./hub" }
cli = { path = "./cli" }
node = { path = "./node" }
