[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scale-info = { version = "2.10.0", default-features = false, features = [
    "derive",
] }
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
    "derive",
] }

sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false }

frame-metadata = "16.0.0"
tungstenite = "0.21.0"
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
hex = "0.4.3"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
# anyhow = "1.0.82"

[features]
default = ["std"]
std = [
    "scale-info/std",
    "codec/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-keyring/std",
]
